# training-free-structured-diffusion-guidance

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
tests/pipelines/: tfsdg_pipeline_test.py
tfsdg/models/: attention.py
tfsdg/pipelines/: __init__.py  tfsdg_pipeline.py
tfsdg/utils/: attention_utils.py  pipeline_utils.py  replace_layer.py
