[tool.poetry]
name = "training-free-structured-diffusion-guidance"
version = "0.1.0"
description = ""
authors = ["Shunsuke Kitada <shunsuke.kitada@linecorp.com>"]
readme = "README.md"
packages = [{include = "tfsdg"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.1"
torchvision = "^0.13.1"
diffusers = ">=0.6.0,<0.7.0"
transformers = "^4.22.2"
accelerate = "^0.12.0"
nltk = "^3.7"
stanza = "^1.4.2"
ftfy = "^6.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.1.3"

[[tool.poetry.source]]
name = "pytorch-cu113"
url = "https://download.pytorch.org/whl/cu113/"
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
